--- a/SlidingMenu/bin/AndroidManifest.xml
+++ b/SlidingMenu/bin/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="info.androidhive.slidingmenu"
+    package="android.app.message"
     android:versionCode="1"
     android:versionName="1.0" >
 
@@ -14,7 +14,7 @@
         android:label="@string/app_name"
         android:theme="@android:style/Theme.Holo.Light.DarkActionBar" >
         <activity
-            android:name="info.androidhive.slidingmenu.Login"
+            android:name="android.app.message.menu.Login"
             android:label="@string/app_name"
             android:theme="@android:style/Theme.Holo.NoActionBar" >
             <intent-filter>
@@ -24,7 +24,7 @@
             </intent-filter>
         </activity>
         
-        <activity android:name=".MainActivity"
+        <activity android:name="android.app.message.menu.MainActivity"
             >
             <meta-data android:name="android.support.PARENT_ACTIVITY"
                 android:value="info.androidhive.slidingmenu.Login" />
