--- a/SlidingMenu/AndroidManifest.xml
+++ b/SlidingMenu/AndroidManifest.xml
@@ -31,6 +31,17 @@
             <meta-data android:name="android.support.PARENT_ACTIVITY"
                 android:value="info.androidhive.slidingmenu.Login" />
         </activity>
+        <activity
+            android:name="app.android.message.menu.FindPeopleFragment"
+            android:label="@string/app_name" >
+        </activity>
+        <activity
+            android:name="app.android.message.menu.AddFriend"
+            android:label="@string/app_name" >
+        </activity>
+        <provider android:name="FriendProvider" 
+           android:authorities="list.friend.provider">
+        </provider>
     </application>
 
 </manifest>
