--- a/SlidingMenu/bin/AndroidManifest.xml
+++ b/SlidingMenu/bin/AndroidManifest.xml
@@ -31,6 +31,14 @@
             <meta-data android:name="android.support.PARENT_ACTIVITY"
                 android:value="info.androidhive.slidingmenu.Login" />
         </activity>
+        <activity 
+            android:name="app.android.message.menu.Signup"
+            android:label="@string/app_name">
+            <intent-filter>
+                <action android:name="android.intent.action.Signup"/>
+                <category android:name="android.intent.category.DEFAULT"/>
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
