--- a/SlidingMenu/bin/AndroidManifest.xml
+++ b/SlidingMenu/bin/AndroidManifest.xml
@@ -40,6 +40,10 @@
             android:name="app.android.message.menu.AddFriend"
             android:label="@string/app_name" >
         </activity>
+        <activity
+            android:name="app.android.message.message_box.MessageBoxActivity"
+            android:label="Inbox" >
+        </activity>
         <provider android:name="FriendProvider" 
            android:authorities="list.friend.provider">
         </provider>
